--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <model-viewer
       alt="Neil Armstrong's Spacesuit from the Smithsonian Digitization Programs Office and National Air and Space Museum"
-      src="RobotExpressive.glb"
+      src="model/RobotExpressive.glb"
       ar
       environment-image="shared-assets/environments/moon_1k.hdr"
       poster="shared-assets/models/NeilArmstrong.webp"
